<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".mainSignIn.MainSignInFragment">

    <ImageView
        android:id="@+id/MainBackGround"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/btnSwitchLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_switch_language"
        android:layout_marginTop="9dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@+id/SwitchLanguage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/SwitchLanguage"/>
    <TextView
        android:id="@+id/SwitchLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:clickable="true"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="left"
        android:text="@string/lang_ru"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/IconTaza"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:src="@drawable/tazaapp_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SwitchLanguage" />

    <TextView
        android:id="@+id/WelcomeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/monste_bold"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:text="@string/welcome_to_taza"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="27dp"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/IconTaza" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/quote_to_taza"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:textSize="20sp"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/WelcomeTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/rounded_button_outline"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/btn_become_client"
        android:textColor="@color/white"
        android:textFontWeight="400"
        app:layout_constraintBottom_toTopOf="@id/btnCleaner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCleaner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button_outline"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/btn_become_cleaner"
        android:textColor="@color/white"
        android:textFontWeight="400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnClient" />

    <TextView
        android:id="@+id/tvSignInText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:clickable="true"
        android:text="@string/signIn_if_u_have_acc"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:textSize="20sp"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCleaner" />

    <TextView
        android:id="@+id/tvSignUpText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/signUp_if_u_dont"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:textSize="15dp"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignInText" />
</androidx.constraintlayout.widget.ConstraintLayout>